--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "parallax-js": "^3.1.0",
+    "rellax": "^1.12.1",
     "vue": "^3.2.13",
+    "vue-rellax": "^0.2.0",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
